--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
 
+                <h2>Login to your Account</h2>
+                <p>Login using social networks</p>
+
+            <div class="all-networks  bg-success d-flex">
+                <div class="networks">
+                    <img src="./images/fb-removebg-preview.png" alt="Facebook" class="fb">
+                </div>
+                <div class="networks">
+                    <img src="./images/google-removebg-preview.png" alt="Google" class="google">
+                </div>
+                <div class="networks">
+                    <img src="./images/linkedin-removebg-preview.png" alt="linkedin" class="linkedin">
+                </div>
+            </div>
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
