--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
                 <h2>Login to your Account</h2>
                 <p>Login using social networks</p>
 
-            <div class="all-networks  bg-success d-flex">
+            <div class="all-networks  bg-warning d-flex justify-content-evenly align-items-center">
                 <div class="networks">
+                    <a href="">
                     <img src="./images/fb-removebg-preview.png" alt="Facebook" class="fb">
+                    </a>
                 </div>
                 <div class="networks">
+                    <a href="">
                     <img src="./images/google-removebg-preview.png" alt="Google" class="google">
+                    </a>
                 </div>
                 <div class="networks">
+                    <a href="">
                     <img src="./images/linkedin-removebg-preview.png" alt="linkedin" class="linkedin">
+                    </a>
                 </div>
             </div>
 
