--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <hr> OR <hr>
+            <p id="or"> <span> OR </span></p>
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
