--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+            <div class="col-lg-6 col-md-6 col-sm-12 text-center bg-info">
 
                 <h2>Login to your Account</h2>
                 <p>Login using social networks</p>
@@ -35,6 +35,9 @@
             </div>
 
             <p id="or"> <span> OR </span></p>
+
+            <input type="email" name="email" id="email" placeholder="Email"> <br>
+            <input type="password" name="password" id="password" placeholder="Password">
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
