--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
             <p id="or"> <span> OR </span></p>
 
-            <input type="email" name="email" id="email" placeholder="Email"> <br>
-            <input type="password" name="password" id="password" placeholder="Password">
+            <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2"> <br>
+            <input type="password" name="password" id="password" placeholder="Password" class="p-2">
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
