--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <h2>Login to your Account</h2>
                 <p>Login using social networks</p>
 
-            <div class="all-networks  bg-warning d-flex justify-content-evenly align-items-center">
+            <div class="all-networks  bg-warning d-flex justify-content-center align-items-center mb-5">
                 <div class="networks">
                     <a href="">
-                    <img src="./images/fb-removebg-preview.png" alt="Facebook" class="fb">
+                    <img src="./images/fb-removebg-preview.png" alt="Facebook" class="fb me-3">
                     </a>
                 </div>
                 <div class="networks">
@@ -33,11 +33,15 @@
                     </a>
                 </div>
             </div>
+            
 
             <p id="or"> <span> OR </span></p>
 
             <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2"> <br>
             <input type="password" name="password" id="password" placeholder="Password" class="p-2">
+
+            <br>
+            <button class="btn btn-success">Sign in</button>
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
