--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 text-center bg-info">
+            <div class="col-lg-5 col-md-5 col-sm-12 text-center ">
 
-                <h2>Login to your Account</h2>
-                <p>Login using social networks</p>
+                <h2 class="main-login">Login to your Account</h2>
+                <p style="color: rgb(168, 168, 168);">Login using social networks</p>
 
-            <div class="all-networks  bg-warning d-flex justify-content-center align-items-center mb-5">
+            <div class="all-networks   d-flex justify-content-center align-items-center mb-5">
                 <div class="networks">
                     <a href="">
                     <img src="./images/fb-removebg-preview.png" alt="Facebook" class="fb me-3">
@@ -35,16 +35,16 @@
             </div>
             
 
-            <p id="or"> <span> OR </span></p>
+            <p id="or" class="mx-auto"> <span> OR </span></p>
 
-            <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2"> <br>
-            <input type="password" name="password" id="password" placeholder="Password" class="p-2">
+            <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2" title="email"> <br>
+            <input type="password" name="password" id="password" placeholder="Password" class="p-2" title="password">
 
             <br>
-            <button class="btn btn-success">Sign in</button>
+            <button class="btn btn-success mt-4 sign-in">Sign in</button>
 
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="col-lg-7 col-md-7 col-sm-12">
 
             </div>
         </div>
