--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <div class="container">
-        <div class="row">
+        <div class="row d-flex justify-content-center mt-5 p-5">
             <div class="col-lg-5 col-md-5 col-sm-12 text-center bg-warning">
 
-                <h2 class="main-login">Login to your Account</h2>
+                <h2 class="main-login mt-5">Login to your Account</h2>
                 <p style="color: rgb(168, 168, 168);">Login using social networks</p>
 
                 <div class="all-networks   d-flex justify-content-center align-items-center mb-5">
