--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <div class="container">
-        <div class="row d-flex justify-content-center mt-5 p-5">
-            <div class="col-lg-5 col-md-5 col-sm-12 text-center bg-warning">
+        <div class="row d-flex justify-content-center mt-5 p-3 login-row">
+            <div class="col-lg-5 col-md-5 col-sm-12 text-center first-col pb-5">
 
                 <h2 class="main-login mt-5">Login to your Account</h2>
                 <p style="color: rgb(168, 168, 168);">Login using social networks</p>
@@ -44,7 +44,7 @@
                     title="password">
 
                 <br>
-                <button class="btn btn-success mt-4 sign-in">Sign in</button>
+                <button class="btn mt-4 sign-in">Sign in</button>
 
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 text-center bg-info d-flex flex-column justify-content-center align-items-center sec-col">
