--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
                 <p id="or" class="mx-auto"> <span> OR </span></p>
 
-                <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2" title="email" required> <br>
+                <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2" title="email" maxlength="40" required> <br>
                 
                 <input type="password" name="password" id="password" placeholder="Password" class="p-2"
-                pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required="">
+                pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" maxlength="20" required>
 
                 <br>
                 <button class="btn mt-4 sign-in">Sign in</button>
