--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button class="btn mt-4 sign-in">Sign in</button>
 
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 text-center bg-info d-flex flex-column justify-content-center align-items-center sec-col">
+            <div class="col-lg-4 col-md-4 col-sm-12 text-center bg-info d-flex flex-column justify-content-center align-items-center sec-col p-4">
                 <h2 class="sec-col-heading">New here?</h2>
                 <p class="mt-4">Sign up and discover a great amount of new opportunities!</p>
                 <button class="btn mt-4 sign-up">Sign up</button>
