--- a/index.html
+++ b/index.html
@@ -7,7 +7,108 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    
+
+    <style>
+        :root {
+            --light-color: #bafbfd;
+            --gradient: linear-gradient(270deg, #38B790, #06f7ff);
+            --color: #00dbe3;
+        }
+
+        .fb {
+            width: 30px;
+            height: 29px;
+        }
+
+        .google {
+            width: 34px;
+            height: 36px;
+        }
+
+        .linkedin {
+            width: 61px;
+            height: 32px;
+        }
+
+        #or {
+            width: 90%;
+            text-align: center;
+            border-bottom: 1px solid #9a9a9a;
+            line-height: 0.1em;
+            margin: 10px 0 20px;
+            font-size: 12px;
+        }
+
+        #or span {
+            background: #fff;
+            padding: 0 10px;
+        }
+
+        input {
+            border-radius: 20px;
+            width: 90%;
+            border: none;
+            background-color: var(--light-color);
+        }
+
+        .sign-in {
+            width: 30%;
+            border-radius: 20px;
+            background: var(--gradient);
+            color: white;
+        }
+
+        .sign-in:hover {
+            background: white;
+            border: 3px double var(--color);
+            box-shadow: 2px 2px 10px var(--color),
+                -2px -2px 10px var(--color);
+            color: var(--color);
+        }
+
+        .sign-up {
+            background-color: white;
+            color: #07a8ad;
+            width: 60%;
+            border-radius: 25px;
+            border: 2px double var(--color);
+            box-shadow: 2px 2px 10px white,
+                -2px -2px 10px white;
+        }
+
+        .sign-up:hover {
+            color: white;
+        }
+
+        .main-login {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 39px;
+        }
+
+        .sec-col-heading {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: white;
+        }
+
+        .sec-col {
+            background: var(--gradient);
+            /* height: 90vh; */
+        }
+
+        .first-col,
+        .sec-col {
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+        }
+
+        .highlight {
+            color: var(--color);
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+
+        .first-col:hover {
+            filter: flip;
+        }
+    </style>
 </head>
 
 <body>
@@ -40,16 +141,20 @@
 
                 <p id="or" class="mx-auto"> <span> OR </span></p>
 
-                <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2" title="email" maxlength="40" required> <br>
-                
+                <input type="email" name="email" id="email" placeholder="Email" class="mb-4 p-2" title="email"
+                    maxlength="40" required> <br>
+
                 <input type="password" name="password" id="password" placeholder="Password" class="p-2"
-                pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" maxlength="20" required>
+                    pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}"
+                    title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                    maxlength="20" required>
 
                 <br>
-                <button class="btn mt-4 sign-in">Sign in</button>
+                <button class="btn mt-4 sign-in"  onclick="checkEmail()">Sign in</button>
 
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 text-center bg-info d-flex flex-column justify-content-center align-items-center sec-col p-4">
+            <div
+                class="col-lg-4 col-md-4 col-sm-12 text-center bg-info d-flex flex-column justify-content-center align-items-center sec-col p-4">
                 <h2 class="sec-col-heading">New here?</h2>
                 <p class="mt-4">Sign up and discover a great amount of new opportunities!</p>
                 <button class="btn mt-4 sign-up">Sign up</button>
